updates
update for 12 team divisional scheduling... almost perfect now. some teams play 5 home games and 3 away etc